@@ -19,8 +19,7 @@ MacOS X, SunOS, QNX and Solaris. Xmp plays over 80 mainstream and obscure
 module formats from Amiga, Atari, Acorn, Apple IIgs and PC.
 
 Many compressed module formats are supported, including popular Unix, DOS
-and Amiga file packers such as gzip, bzip2, SQSH, Powerpack, etc. Certain
-module-specific compressed formats such as MO3 are handled transparently.
+and Amiga file packers including gzip, bzip2, SQSH, Powerpack, etc.
 
 
 SUPPORTED FORMATS
@@ -160,6 +159,7 @@ to be installed on the system:
   lha		lha		Amiga, DOS
   lzma		lzma		Linux, Unix
   mo3		unmo3		DOS?
+  oxm		oggdec		Windows
   rar		unrar		DOS
   Z		compress	Unix
   zip		unzip		DOS
@@ -237,7 +237,8 @@ for description of the command line arguments recognized by xmp.)
 
 FEEDBACK
 
-Send your comments and bug reports to xmp-devel@lists.sourceforge.net.
+Send your comments and bug reports to xmp-devel@lists.sourceforge.net, or
+directly to cmatsuoka@gmail.com.
 
 
 LICENSE
